Change project url for johan.fun to github

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -11,6 +11,6 @@
   lang: 'Node'
 - blog:
   title: 'johan.fun (this site!)'
-  url: 'https://johan.fun'
+  url: 'https://github.com/johan-andersson01/johan-andersson01.github.io'
   description: 'blog / portfolio / personal space'
   lang: 'Node'
