--- a/_data/books.yml
+++ b/_data/books.yml
@@ -24,4 +24,8 @@
   author: "John Williams"
   date: 2018-06-23
   rating: 4
-  
+- catscradle:
+  title: "Cat's Cradle"
+  author: "Kurt Vonnegut"
+  date: 2018-07-19
+  rating: 2
