--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,5 +1,6 @@
-- go climbing
-- optimize problems
-- watch foreign film
-- read books
-- learn stuff
+- climbing
+- optimization
+- film
+- books
+- learning
+- design
