--- a/_data/books.yml
+++ b/_data/books.yml
@@ -29,3 +29,8 @@
   author: "Kurt Vonnegut"
   date: 2018-07-19
   rating: 2
+- liftarensguide1:
+  title: "Liftarens guide till galaxen"
+  author: "Douglas Adams"
+  date: 2018-07-28
+  rating: 2
