--- a/_data/books.yml
+++ b/_data/books.yml
@@ -59,3 +59,9 @@
   date: 2018-09-03
   rating: 4
   lang: "en"
+- foundation:
+  title: "Foundation"
+  author: "Isaac Asimov"
+  date: 2018-11-15
+  rating: 3
+  lang: "en"
