--- a/_data/books.yml
+++ b/_data/books.yml
@@ -59,3 +59,9 @@
   date: 2018-09-03
   rating: 4
   lang: "en"
+- jokingfeynman:
+  title: "Surely You're Joking Mr. Feynman"
+  author: "Richard Feynman"
+  date: 2019-01-29
+  rating: 5
+  lang: "en"
