--- a/_data/books.yml
+++ b/_data/books.yml
@@ -77,3 +77,9 @@
   date: 2019-01-29
   rating: 5
   lang: "en"
+- powerofhabit:
+  title: "The Power of Habit"
+  author: "Charles Duhigg"
+  date: 2019-02-08
+  rating: 3
+  lang: "en"
