--- a/_data/books.yml
+++ b/_data/books.yml
@@ -101,4 +101,9 @@
   date: "2019-07-22"
   rating: 4
   lang: "en"
-
+- darkforest:
+  title: "The Dark Forest"
+  author: "Liu Cixin"
+  date: "2019-08-02"
+  rating: 4
+  lang: "en"
