--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,5 @@ title: johan.fun
 author: Johan Andersson
 description: 'personal space / blog / portfolio'
 mail: johan-andersson01@protonmail.com
+plugins:
+    - jekyll-feed
