--- a/_data/books.yml
+++ b/_data/books.yml
@@ -125,3 +125,10 @@
   rating: 4
   lang: "en"
   audio: true
+  - alice:
+  title: "Alice's Adventures in Wonderland
+  author: "Lewis Carroll"
+  date: "2019-09-15"
+  rating: 1
+  lang: "sv"
+  audio: false
