--- a/_data/books.yml
+++ b/_data/books.yml
@@ -113,3 +113,9 @@
   date: "2019-09-15"
   lang: "sv"
   audio: false
+- margarita:
+  title: "The Master and Margarita"
+  author: "Mikhail Bulgakov"
+  date: "2019-10-14"
+  lang: "sv"
+  audio: false
