--- a/_data/books.yml
+++ b/_data/books.yml
@@ -119,7 +119,7 @@
   date: "2019-10-14"
   lang: "sv"
   audio: false
-- montecristo
+- montecristo:
   title: "The Count of Monte Cristo"
   author: "Alexandre Dumas"
   date: "2020-02-04"
