--- a/_data/books.yml
+++ b/_data/books.yml
@@ -125,3 +125,15 @@
   date: "2020-02-04"
   lang: "en"
   audio: false
+- circe:
+  title: "Circe"
+  author: "Madeline Miller"
+  date: "2020-03-15"
+  lang: "en"
+  audio: false
+- circe:
+  title: "Dune"
+  author: "Frank Herbert"
+  date: "2020-05-07"
+  lang: "en"
+  audio: false
